--- a/JS/style.css
+++ b/JS/style.css
@@ -8,12 +8,11 @@ h1{
 /* Project #1 css code */
 
 #project1{
-    background-color: red;
+    background-color: yellow;
 }
 
 button{
-    height:80px;
-    width:80px;
+    border-radius: 50%;
     font:bold 10pt comic sans ms;
 }
 
@@ -42,5 +41,69 @@ button{
     margin-left: auto;
     display:grid;
     
+    grid-template-columns: repeat(3,90px);
+    grid-template-rows: repeat(2,85px);
+
 }
+
+.CalorieBtns > button{
+    background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 0%;
+  
+
+}
+
+#button1 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #4CAF50;
+  }
+  
+  #button1:hover {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  #button2 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #008CBA;
+  }
+  
+  #button2:hover {
+    background-color: #008CBA;
+    color: white;
+  }
+  
+  #button3 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #f44336;
+  }
+  
+  #button3:hover {
+    background-color: #f44336;
+    color: white;
+  }
+
+#button4{
+    background-color: white;
+    color: black;
+    border: 2px solid #e7e7e7;
+    grid-column: span 3;
+}
+
+#button4:hover {
+    background-color: #e7e7e7;
+}
+
+
 
