--- a/JS/style.css
+++ b/JS/style.css
@@ -122,5 +122,136 @@ button{
     background-color: #e7e7e7;
 }
 
+/* Project 2 css*/
+#Project2{
+  background-color:peachpuff;
+  text-align: center;
+}
+.block{
+  display: flex;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+#re{
+  background-color: black;
+  color:white;
+  border-radius: 0%;
+  border: solid red;
+}
+.buttons{
+  margin-right:auto;
+  margin-left: auto;
+  display:grid;
+  grid-gap:10px;
+  grid-template-columns: repeat(5,150px);
+  grid-template-rows: 450px, 150px;
+}
+#larger{
+  border:solid red 5px;
+  width: 100%;
+  height:450px;
+  grid-column-start: 2;
+  grid-column-end: 5;
+
+}
+#f1st{
+  width:150px;
+  height:150px;
+  background: url("Images/1st.png") no-repeat center;
+  background-size: 100%;
+  grid-column: 1;
+}
+#s2nd{
+  width:150px;
+  height:150px;
+  background: url("Images/2nd.png") no-repeat center;
+  background-size: 100%;
+}
+#th3rd{
+  width:150px;
+  height:150px;
+  background: url("Images/3rd.jpg") no-repeat center;
+  background-size: 100%;
+
+}
+
+#f4th{
+  width:150px;
+  height:150px;
+  background: url("Images/4th.png") no-repeat center;
+  background-size: 100%;
+
+  
+}
+#fi5th{
+  background: url("Images/5th.jpg") no-repeat center;
+  width:150px;
+  height:150px;
+  background-size: 100%;
+
+}
+.buttons > button{
+  border-radius:0;
+  border:solid red 4px;
+  
+}
+
 
 
